# scriptengine

./: .gitignore  .readthedocs.yaml  CHANGES.txt  README.md  TODO  all-features.yml  environment-dev.yml  environment.yml  from-code.py  pyproject.toml  requirements.txt  setup.py  tutorial.inc.yml  tutorial.yml
.github/workflows/: build-package.yml  install-from-source.yml  publish-to-pypi.yml  pytest.yml
doc/: file-tasks.rst  index.rst  intro.rst  loops.rst  other-tasks.rst  system-tasks.rst
docs/sphinx/: base-tasks.rst  basic-tasks.rst  cli.rst  concepts.rst  conf.py  ecearth-tasks.rst  file-tasks.rst  index.rst  installation.rst  intro.rst  loops.rst  requirements.txt  scripts.rst  system-tasks.rst
docs/tutorial/: tutorial.inc.yml  tutorial.yml
scriptengine/: context.py  exceptions.py  jinja.py  jobs.py  logging.py  yaml.py
scriptengine/cli/: se  se.py
scriptengine/engines/: simple_script_engine.py
scriptengine/exceptions/: stop_exception.py
scriptengine/helpers/: terminal_colors.py
scriptengine/jobs/: __init__.py  jobs.py
scriptengine/scripts/: __init__.py  logging.py  parse.py  simple_script_engine.py
scriptengine/tasks/: __init__.py  chdir.py  command.py  config.py  eceinfo.py  echo.py  exit.py  file.py  getenv.py  include.py  loader.py  slurm_submit.py  task.py  template.py
scriptengine/tasks/base/: __init__.py  chdir.py  command.py  config.py  context.py  echo.py  envvars.py  exit.py  file.py  find.py  getenv.py  include.py  load_yaml.py  loader.py  task.py  task_timer.py  template.py  time.py  timing.py
scriptengine/tasks/base/file/: link.py  move.py  remove.py
scriptengine/tasks/base/files/: copy.py  remove.py
scriptengine/tasks/core/: loader.py  task.py  timing.py
scriptengine/tasks/ecearth/: __init__.py  slurm.py
scriptengine/yaml/: parser.py
se/: helpers.py  jobs.py  scripts.py  tasks.py
se/cli/: se
se/exceptions/: __init__.py
se/helpers/: __init__.py  helpers.py  jinja_rendering.py  terminal_colors.py
se/jobs/: __init__.py  jobs.py  parse.py
se/scripts/: __init__.py  logging.py  parse.py  simple_script_engine.py
se/tasks/: __init__.py  chdir.py  command.py  config.py  configuration.py  copy.py  eceinfo.py  echo.py  exit.py  file.py  files.py  getenv.py  include.py  slurm_submit.py  task.py  template.py
src/scriptengine/: context.py  exceptions.py  jinja.py  jobs.py  logging.py
src/scriptengine/cli/: se.py
src/scriptengine/engines/: __init__.py  simple_script_engine.py
src/scriptengine/helpers/: terminal_colors.py
src/scriptengine/tasks/base/: chdir.py  command.py  context.py  echo.py  envvars.py  exit.py  find.py  include.py  task_timer.py  template.py  time.py
src/scriptengine/tasks/base/file/: make_dir.py
src/scriptengine/tasks/core/: __init__.py  loader.py  task.py  timing.py
src/scriptengine/yaml/: noparse_strings.py
tests/: test_context_classes.py  test_jinja_filters.py  test_jobs.py  test_logging.py
tests/context/: test_context_contains.py  test_context_create.py  test_context_dotted_keys.py  test_context_io.py  test_context_merge.py  test_context_misc.py  test_context_reset.py  test_context_update.py
tests/jobs/: test_conditionals.py  test_context_changes.py  test_create.py  test_looping.py  test_run.py
tests/simplescriptengine/: test_sse_context_update.py
tests/tasks/base/: do_not_run_test_context_save+restore.py  test_command.py  test_context.py  test_copy.py  test_echo.py  test_envvars.py  test_find.py  test_include.py  test_link.py  test_make_dir.py  test_move.py  test_remove.py  test_task.py  test_task_timing.py
